//protoc --go_out=./gen/go --go-grpc_out=./gen/go ./proto/auth.proto
syntax="proto3";

package auth;

option go_package = "auth/v3;auth";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Unregister (UnregisterRequest) returns (UnregisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc ChangePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);

    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
    string login=1;
    string password=2;
    string email=3;
}
message RegisterResponse {
}
message UnregisterRequest {
    string login=1;
}
message UnregisterResponse {   
}

message LoginRequest {
    string login=1;
    string password=2;
    string deviceCode=3;
}
message LoginResponse {
    string accessToken=1;
    string refreshToken=2;
}
message LogoutRequest {
    string login=1;
    string deviceCode=3;
}
message LogoutResponse {
}
message UpdatePasswordRequest {
    string login=1;
    string newPassword=2;
}
message UpdatePasswordResponse {
}

message ValidateTokenRequest {
    string tokenId=1;
}
message ValidateTokenResponse {
}
message RevokeTokenRequest {
    string tokenId=1;
}
message RevokeTokenResponse {
}
message RefreshTokenRequest {
    string tokenId=1;
}
message RefreshTokenResponse {
    string accessToken=1;
    string refreshToken=2;
}